# kled.io

./: .coderabbit.yaml  Makefile  README.md  go.mod
.github/workflows/: build-and-publish.yml  build-cli.yml  build-desktop.yml  build-unified-cli.yml  custom-release.yml  install-triple-cd-pipeline.yml  publish-downloads.yml  test-unified-cli.yml  update-docs.yml
cli/: README.md
cli/kcluster/: README.md  main.go  main_test.go
cli/kled/: README.md  main.go
cli/kledspace/: README.md  main.go
cli/kpolicy/: README.md  main.go
cli/unified/: README.md  go.mod  main.go
desktop/: .eslintrc.js  README.md  jest.config.js  package.json  rsbuild.config.ts  tailwind.config.js  tsconfig.json
desktop/src/: App.tsx  main.js  main.tsx  routes.tsx  runner.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/server/: Cargo.toml
desktop/src-tauri/server/src/: lib.rs  main.rs
desktop/src-tauri/src/: action_logs.rs  commands.rs  custom_protocol.rs  daemon.rs  file_exists.rs  fix_env.rs  get_env.rs  install_cli.rs  main.rs  resource_watcher.rs  server.rs  spacetime_server.rs  supabase.rs  system_tray.rs  updates.rs  util.rs  window.rs
desktop/src-tauri/src/commands/: config.rs  constants.rs  delete_pro_instance.rs  delete_provider.rs  list_pro_instances.rs  list_workspaces.rs  start_daemon.rs
desktop/src-tauri/src/daemon/: client.rs
docs/: RELEASE_PROCESS.md
mobile/: README.md
scripts/: install-cli.sh  test-cli-unix.sh  test-cli-windows.ps1  test-windows-installer.ps1  validate-installer.ps1
web/: README.md  index.html  install.sh
(+141 files in other folders)
