[package]
name = "kled-beta"
version = "0.1.0"
description = "Kled Desktop Application"
authors = ["Spectrum Web Co"]
license = "MIT"
repository = "https://github.com/spectrumwebco/kled.io"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api", "tray-icon"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Tauri plugins
tauri-plugin-dialog = { version = "2.0.0-beta" }
tauri-plugin-shell = { version = "2.0.0-beta" }
tauri-plugin-fs = { version = "2.0.0-beta" }
tauri-plugin-updater = { version = "2.0.0-beta" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
